# passwordgenerator

./: README.md  errors.py  generator.py  plan.md  pyproject.toml  requirements.txt
tests/: test_main.py
